snapcraft: Configure NPM to use proxy if detected
Signed-off-by: Andrei Jiroh Eugenio Halili <andreijiroh@madebythepins.tk>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -66,6 +66,10 @@ parts:
            export ELECTRON_GET_USE_PROXY=1
            export GLOBAL_AGENT_HTTP_PROXY="${http_proxy}"
            export GLOBAL_AGENT_HTTPS_PROXY="${http_proxy}"
+           npm config set proxy ${http_proxy}
+           npm config set https-proxy ${http_proxy}
+        else
+           echo "No proxy detected, skipping configuring proxy stuff...
         fi
 
         # install Yarn first
